--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,22 @@
 	<string name="bass_clef">Bass clef</string>
 	<string name="title_activity_practice"></string>
 	<string name="play_starting_pitch">Play Starting Pitch</string>
-	<string name="play_rhythm">Play Rhythm</string>
+	<string name="play_rhythm">Play Tempo</string>
 	<string name="start_recording">Record Your Singing</string>
 	<string name="stop_recording">Stop Recording</string>
 	<string name="playback_recording">Play Back Your Singing</string>
 	<string name="playback_reference">Play Correct Version</string>
-	<string name="next_exercise">Next Exercise</string>
+	<string name="need_help">Need Help?</string>
+	<string name="need_help_message">
+		Remember to consider:\n
+		\t-Time Signature\n
+		\t-Key Signature\n
+		\t-Rhythmic structure\n
+		\t-Melodic structure\n
+		\t-Common patterns (1-3-5-8, do-mi-so-do)\n
+	</string>
+	<string name="title_activity_select_difficulty">Select Difficulty</string>
+	<string name="easy_difficulty">Easy Difficulty</string>
+	<string name="medium_difficulty">Medium Difficulty</string>
+	<string name="title_activity_select_music">Select Music</string>
 </resources>
